--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </section>
 
     <footer>
-        <p>연락 <a href="#">LinkedIn</a> | <a href="#">GitHub</a></p>
+        <p>연락: <a href="mailto:boram@chungbuk.ac.kr">email</a> | <a href="https://github.com/hwa0mb0y">GitHub</a></p>
     </footer>
 
     <script>
